--- a/02-spa/src/app/components/heroes-filtrados/heroes-filtrados.component.html
+++ b/02-spa/src/app/components/heroes-filtrados/heroes-filtrados.component.html
@@ -1,12 +1,19 @@
-<h1>Héroes <small>Marvel y DC</small></h1>
+<h1>Buscando:  <small>{{busqueda}}</small></h1>
 <hr>
+<div *ngIf="heroes.length == 0" class="row">
+    <div class="col-md-12">
+        <div class="alert alert-info" role="alert">
+            No se encontraron resultados
+        </div>
+    </div>
+</div>
 
 <div class="card-columns">
     <div class="card animated fadeIn fast" *ngFor="let heroe of heroes;let i = index;">
         <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
         <div class="card-body">
           <h5 class="card-title">{{heroe.nombre}}</h5>
-          <p class="card-text">{{heroe.bio}}</p>
+          <p class="card-text">heroe.bio</p>
           <p class="card-text"><small class="text-muted">{{heroe.aparicion}}</small></p>
           <button (click)="verHeroe(i)" class="btn btn-outline-primary btn-block">
               Ver más boton...
