--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -23,7 +23,58 @@
           <td>LowerCase</td>
           <td>{{nombre | lowercase}}</td>
         </tr>
+
+        <tr>
+          <td>{{nombre}}</td>
+          <td>Slice :3</td>
+          <td>{{nombre | slice:3}}</td>
+        </tr>
+        <tr>
+          <td>{{nombre}}</td>
+          <td>Slice 0:3</td>
+          <td>{{nombre | slice:0:3}}</td>
+        </tr>
+
+        <tr>
+          <td>{{arreglo}}</td>
+          <td>Slice 1:5</td>
+          <td>{{arreglo | slice:1:5}}</td>
+        </tr>
+
+        <tr>
+          <td>{{PI}}</td>
+          <td>number:'1.0-0'</td>
+          <td>{{PI | number:'1.0-0'}}</td>
+        </tr>
+
+        <tr>
+          <td>{{PI}}</td>
+          <td>number:'3.0-0'</td>
+          <td>{{PI | number:'3.0-0'}}</td>
+        </tr>
+
+        <tr>
+          <td>{{PI}}</td>
+          <td>number:'.0-0'</td>
+          <td>{{PI | number:'.0-2'}}</td>
+        </tr>
+
+        <tr>
+          <td>{{porcentaje}}</td>
+          <td>percent</td>
+          <td>{{porcentaje | percent}}</td>
+        </tr>
+
+        <tr>
+          <td>{{porcentaje}}</td>
+          <td>percent</td>
+          <td>{{porcentaje | percent:'2.2-2'}}</td>
+        </tr>
       </tbody>
     </table>
+    <h4>Slice</h4>
+    <ul>
+      <li *ngFor="let item of arreglo | slice:5:20">{{item}}</li>
+    </ul>
   </div>
 </div>
