--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -70,11 +70,50 @@
           <td>percent</td>
           <td>{{porcentaje | percent:'2.2-2'}}</td>
         </tr>
+
+        <tr>
+          <td>{{salario}}</td>
+          <td>currency</td>
+          <td>{{salario | currency}}</td>
+        </tr>
+        <tr>
+          <td>{{salario}}</td>
+          <td>currency:EUR</td>
+          <td>{{salario | currency:'EUR'}}</td>
+        </tr>
+
+        <tr>
+          <td>{{salario}}</td>
+          <td>currency:'CAD$':'symbol':'.0-0'</td>
+          <td>{{salario | currency:'CAD$':'symbol':'.0-0'}}</td>
+        </tr>
+
+        <tr>
+          <td>{{salario}}</td>
+          <td>currency:'P ':'symbol':'.0-0'</td>
+          <td>{{salario | currency:'P ':'symbol':'.0-0'}}</td>
+        </tr>
+
+        <tr>
+          <td>{{valorPromesa}}</td>
+          <td>async</td>
+          <td>{{valorPromesa | async}}</td>
+        </tr>
       </tbody>
     </table>
-    <h4>Slice</h4>
+    <h3>Slice</h3>
     <ul>
       <li *ngFor="let item of arreglo | slice:5:20">{{item}}</li>
     </ul>
+
+    <h3>JSON</h3>
+    <hr>
+    <div class="row mb-5">
+      <div class="col">
+        <pre>
+          {{heroe | json}}
+        </pre>
+      </div>
+    </div>
   </div>
 </div>
