Hasta clase 111 Fin SpotyApp

--- a/04-spotiapp/src/styles.css
+++ b/04-spotiapp/src/styles.css
@@ -6,7 +6,12 @@ body {
 }
 
 hr {
-    border-color: white;
+    border-color: white !important;
+}
+
+th,
+td {
+    color: white;
 }
 
 .puntero {
