--- a/05-deseos/src/app/pages/tab1/tab1.page.html
+++ b/05-deseos/src/app/pages/tab1/tab1.page.html
@@ -7,9 +7,14 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" color="dark">
+
+  <app-listas></app-listas>
+
   <ion-list color="dark">
-    <ion-item *ngFor="let lista of deseosService.listas" detail color="dark">
+    <ion-item *ngFor="let lista of deseosService.listas" detail color="dark" 
+              (click)="listaSeleccionada(lista)">
       <ion-label>{{lista.titulo}}</ion-label>
+      <ion-note slot="end" color="tertiary">{{lista.items.length}} items</ion-note>
     </ion-item>
   </ion-list>
 
