--- a/06-miscelaneos/src/app/components/clases/clases.component.html
+++ b/06-miscelaneos/src/app/components/clases/clases.component.html
@@ -11,3 +11,14 @@
 </h3>
 <button class="btn" type="button" [ngClass]="{'btn-danger':propiedades.danger, 'btn-info':!propiedades.danger}" 
 (click)="propiedades.danger = !propiedades.danger">Cambiar</button>
+
+<br><br>
+<h3>Proceso asincrono</h3>
+<button type="button" class="btn btn-primary" 
+    (click)="ejecutar()"
+   [disabled]="loading"
+    >
+    <i class="fa" [ngClass]="{'fa-save':!loading, 'fa-refresh fa-spin':loading}"></i>
+    <span *ngIf="!loading"> Guardar cambios</span>
+    <span *ngIf="loading"> Espere por favor</span>
+</button>
