--- a/06-miscelaneos/src/app/app.component.html
+++ b/06-miscelaneos/src/app/app.component.html
@@ -1,11 +1,7 @@
+<app-navbar></app-navbar>
 <div class="container main-container" >
     <h1>Demos <small>Angular</small></h1>
     <hr>
-    <!-- <app-ng-style></app-ng-style> -->
-    <!-- <app-css></app-css> -->
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nemo aspernatur est repudiandae, sed alias deleniti nesciunt fuga possimus error iste sunt nisi labore, ipsa velit rerum atque, pariatur quibusdam!</p> -->
-
-    <!-- <app-clases></app-clases> -->
-    <!-- <p [appResaltado]="'orange'">Hola mundo</p>    -->
-    <app-ng-switch></app-ng-switch>
+    
+    <router-outlet></router-outlet>
 </div>
