--- a/11-formularios/src/app/pages/template/template.component.html
+++ b/11-formularios/src/app/pages/template/template.component.html
@@ -32,7 +32,7 @@
                [class.is-invalid]="apellido.invalid && apellido.touched"
                [ngModel]="usuario.apellido"
                required
-               maxlength="5"
+               minlength="5"
                placeholder="Apellido"
                #apellido="ngModel"
                >
@@ -62,7 +62,23 @@
     </div>
   </div>
 
-
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Pais</label>
+    <div class="col-8">
+      <select 
+        name="pais" 
+        class="form-control" 
+        [ngModel]="usuario.pais" 
+        require 
+        [class.is-invalid]="pais.invalid && pais.touched" 
+        [disabled]="paises.length === 0" 
+        #pais="ngModel">
+        <option *ngFor="let pais of paises" [value]="pais.codigo" >
+          {{pais.nombre}}
+        </option>
+      </select>
+    </div>
+  </div>
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
