--- a/11-formularios/src/app/pages/template/template.component.html
+++ b/11-formularios/src/app/pages/template/template.component.html
@@ -81,6 +81,28 @@
   </div>
 
   <div class="form-group row">
+    <label class="col-2 col-form-label">Genero</label>
+    <div class="col-8">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio"
+        name="genero" [ngModel]="usuario.genero" value="M" 
+        [class.is-invalid]="genero.invalid && genero.touched"
+        required
+        #genero="ngModel">
+        <label class="form-check-label">Masculino</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio"
+        name="genero" [ngModel]="usuario.genero" value="F" 
+        [class.is-invalid]="genero.invalid && genero.touched"
+        required
+        #genero="ngModel">
+        <label class="form-check-label">Femenino</label>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
       <button type="submit" class="btn btn-outline-primary btn-block">
@@ -88,5 +110,7 @@
       </button>
     </div>
   </div>
+
+  
 
 </form>
